[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/Area.gd" type="Script" id=1]
[ext_resource path="res://areabg.png" type="Texture" id=2]
[ext_resource path="res://handler.png" type="Texture" id=3]
[ext_resource path="res://fonts/calibri.tres" type="DynamicFont" id=4]

[node name="Area" type="Control"]
margin_right = 100.0
margin_bottom = 100.0
script = ExtResource( 1 )

[node name="Background" type="TextureButton" parent="."]
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 2 )
expand = true

[node name="ScaleButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -30.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_top = 0.59
anchor_right = 1.0
anchor_bottom = 0.59
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CharContainer" type="HFlowContainer" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 0.794643
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2

[node name="Grid" type="GridContainer" parent="CenterContainer"]
unique_name_in_owner = true
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0
grow_horizontal = 2
mouse_filter = 2
size_flags_horizontal = 3

[connection signal="button_down" from="Background" to="." method="_on_Background_button_down"]
[connection signal="button_up" from="Background" to="." method="_on_Background_button_up"]
[connection signal="button_down" from="ScaleButton" to="." method="_on_ScaleButton_button_down"]
[connection signal="button_up" from="ScaleButton" to="." method="_on_ScaleButton_button_up"]
